# cpp_tracker

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure  configure.sh
scripts/: win64.cmake
src/: CMakeLists.txt  active_window.h  logger.cpp  logger.h  main.cpp  process_activity.h  resource_usage.h  system_info.h  user.h  utils.h
